# OpcUaTestProject

./: .gitignore  Dockerfile  README.rst  build.bat  server.bat  start.bat
docs/source/: conf.py  glossary.rst  index.rst
docs/source/1_getting_started/: installation.rst  overview.rst
src/: CMakeLists.txt
src/TestProject/: CMakeLists.txt
src/TestProject/Config/: OpcUaServer.xml  plc.xml
src/TestProject/CustomerDataTypes/: build.bat  build.sh
src/TestProject/linux/etc/init/: TestProject.conf.in
src/TestProject/linux/etc/init.d/: TestProject.in
src/TestProject/linux/script/: postinst  prerm
src/TestProject/linux/usr/lib/systemd/system/: TestProject.service.in
